commit translated contents

--- a/articles/iot-central/government/toc.yml
+++ b/articles/iot-central/government/toc.yml
@@ -20,14 +20,12 @@
       href: concepts-waterconsumptionmonitoring-architecture.md
     - name: 水质检测参考体系结构
       href: concepts-waterqualitymonitoring-architecture.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 将应用与 Dynamics 365 Field Services 连接
       href: how-to-configure-connected-field-services.md
     - name: 连接设备
       items:
-        - name: 准备和连接 MXChip IoT DevKit
-          href: ../core/howto-connect-devkit.md?toc=/azure/iot-central/government/toc.json&bc=/azure/iot-central/government/breadcrumb/toc.json
         - name: 准备和连接 Rigado Cascade 500
           href: ../core/howto-connect-rigado-cascade-500.md?toc=/azure/iot-central/government/toc.json&bc=/azure/iot-central/government/breadcrumb/toc.json
         - name: 使用 Azure CLI 监视设备连接
@@ -107,9 +105,9 @@
     - name: Azure IoT SDK
       items:
         - name: IoT 服务 SDK
-          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks'
+          href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
         - name: IoT 设备 SDK
-          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
+          href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
     - name: 支持和帮助选项
       href: /azure/iot-fundamentals/iot-support-help
     - name: 客户数据请求
