--- a/articles/key-vault/general/index.yml
+++ b/articles/key-vault/general/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: mbaldwin
   manager: rkarlin
   ms.date: 09/19/2019
-  ms.openlocfilehash: f1e519c99bf55abb8a72ada83d59fa1e4c063998
-  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
+  ms.openlocfilehash: ff7af5ead7cc14deb974700e7bf6f3553f2e71f7
+  ms.sourcegitcommit: 5b8fb60a5ded05c5b7281094d18cf8ae15cb1d55
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/23/2020
-  ms.locfileid: "87078887"
+  ms.lasthandoff: 07/29/2020
+  ms.locfileid: "87387738"
 landingContent:
 - title: 关于 Azure Key Vault
   linkLists:
@@ -24,12 +24,14 @@ landingContent:
     links:
     - text: 什么是 Azure Key Vault？
       url: overview.md
+    - text: 关于软删除的重要新消息
+      url: soft-delete-change.md
   - linkListType: concept
     links:
     - text: 基本概念
       url: basic-concepts.md
     - text: 软删除
-      url: overview-soft-delete.md
+      url: soft-delete-overview.md
     - text: 限制
       url: overview-throttling.md
 - title: 教程
