commit translated contents

--- a/articles/azure-portal/TOC.yml
+++ b/articles/azure-portal/TOC.yml
@@ -12,9 +12,13 @@
   items:
     - name: 在门户中创建 VM
       href: ../virtual-machines/windows/quick-create-portal.md?toc=/azure/azure-portal/toc.json&bc=/azure/azure-portal/breadcrumb/toc.json
-    - name: 创建仪表板 - ARM 模板
-      displayName: Resource Manager
-      href: quick-create-template.md
+    - name: 创建仪表板
+      items:
+        - name: Azure PowerShell
+          href: quickstart-portal-dashboard-powershell.md
+        - name: ARM 模板
+          displayName: Resource Manager
+          href: quick-create-template.md
 - name: 概念
   items:
     - name: 使用基于角色的访问控制共享仪表板
