--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -45,6 +45,9 @@
       items:
         - name: 安全性
           items:
+            - name: Azure Policy 的安全控件
+              displayName: 'regulatory, compliance, standards, domains'
+              href: ./security-controls-policy.md
             - name: 安全基线
               href: security-baseline.md
         - name: 容器注册表层和限制
