--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -458,12 +458,15 @@
         - name: 参数化查询
           displayName: 'parameterized query, parameterized, parameter, parameters'
           href: sql-query-parameterized-queries.md
-        - name: LINQ to SQL
-          displayName: 'linq, .NET'
-          href: sql-query-linq-to-sql.md
         - name: SQL 查询执行
           displayName: 'query performance, query execution'
           href: sql-query-execution.md
+        - name: 分页
+          displayName: 'page, paging, continuation, token, pagination'
+          href: sql-query-pagination.md
+        - name: LINQ to SQL
+          displayName: 'linq, .NET'
+          href: sql-query-linq-to-sql.md
     - name: 使用 Azure Cosmos 帐户
       href: account-overview.md
     - name: 容器和项
@@ -671,7 +674,7 @@
             - name: 使用 PowerShell 管理
               href: powershell-samples-cassandra.md
             - name: 使用 Azure CLI 进行管理
-              href: cli-samples-cassandra.md
+              href: cli-samples.md
     - name: MongoDB API
       items:
         - name: 概述
@@ -765,7 +768,7 @@
             - name: 使用 PowerShell 管理
               href: powershell-samples-mongodb.md
             - name: 使用 Azure CLI 进行管理
-              href: cli-samples-mongodb.md
+              href: cli-samples.md
             - name: 排查常见问题
               href: mongodb-troubleshoot.md
     - name: Gremlin API
@@ -825,7 +828,7 @@
             - name: 使用 PowerShell 管理
               href: powershell-samples-gremlin.md
             - name: 使用 Azure CLI 进行管理
-              href: cli-samples-gremlin.md
+              href: cli-samples.md
         - name: 参考
           items:
             - name: 响应标头
@@ -896,7 +899,7 @@
             - name: 使用 PowerShell 管理
               href: powershell-samples-table.md
             - name: 使用 Azure CLI 进行管理
-              href: cli-samples-table.md
+              href: cli-samples.md
         - name: 参考
           items:
             - name: .NET
