--- a/articles/machine-learning/data-science-virtual-machine/index.yml
+++ b/articles/machine-learning/data-science-virtual-machine/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: gvashishtha
   ms.author: gopalv
   ms.date: 09/13/2019
-  ms.openlocfilehash: 584d2c262c3db8d67a71a683e8429712c99dbedd
-  ms.sourcegitcommit: d118ad4fb2b66c759b70d4d8a18e6368760da3ad
+  ms.openlocfilehash: 816a82095c84c7991d5d68b08d479c629d10f07a
+  ms.sourcegitcommit: 0b8320ae0d3455344ec8855b5c2d0ab3faa974a3
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/02/2020
-  ms.locfileid: "84297881"
+  ms.lasthandoff: 07/30/2020
+  ms.locfileid: "87431894"
 landingContent:
 - title: Data Science Virtual Machine 入门
   linkLists:
@@ -52,7 +52,7 @@ landingContent:
   linkLists:
   - linkListType: learn
     links:
-    - text: Azure 机器学习
-      url: /azure/machine-learning/
+    - text: Azure 机器学习计算实例
+      url: /azure/machine-learning/concept-compute-instance
     - text: 比较我们的 ML 产品
       url: https://docs.microsoft.com/azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure/machine-learning/studio/context/ml-context
